form & dashboard works

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     /* Set gray background color and 100% height */
     .sidenav {
       background-color: #f1f1f1;
-      height: 100%;
+      height: 50%;
     }
 
     /* On small screens, set height to 'auto' for the grid */
@@ -33,11 +33,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="http://localhost:3000">Leaf Project</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Dashboard</a></li>
+        <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Age</a></li>
         <li><a href="#">Gender</a></li>
         <li><a href="#">Geo</a></li>
@@ -49,9 +49,9 @@
 <div class="container-fluid">
   <div class="row content">
     <div class="col-sm-3 sidenav hidden-xs">
-      <h2>Logo</h2>
+      <h2>Leaf Project</h2>
       <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="#section1">Dashboard</a></li>
+        <li class="active"><a href="http://localhost:3000">Home</a></li>
         <li><a href="#section2">Age</a></li>
         <li><a href="#section3">Gender</a></li>
         <li><a href="#section3">Geo</a></li>
@@ -93,23 +93,17 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="well">
-            <p>Text</p>
-            <p>Text</p>
-            <p>Text</p>
+
           </div>
         </div>
         <div class="col-sm-4">
           <div class="well">
-            <p>Text</p>
-            <p>Text</p>
-            <p>Text</p>
+
           </div>
         </div>
         <div class="col-sm-4">
           <div class="well">
-            <p>Text</p>
-            <p>Text</p>
-            <p>Text</p>
+            
           </div>
         </div>
       </div>
