before adding query routes

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Leaf Project Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -66,14 +66,16 @@
       </div>
       <div class="row">
         <div class="col-sm-3">
+          <a href='http://localhost:3000/'>
           <div class="well">
-            <h4>Number of Leaves</h4>
-            <p><%= count %></p>
+            <h4>Total number of Leaves</h4>
+            <p> <%= count %></p>
           </div>
+          </a>
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <h4>Annotated Leaves</h4>
+            <h4>Total Annotated Leaves</h4>
             <p></p>
           </div>
         </div>
@@ -85,7 +87,7 @@
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <h4>Bounce</h4>
+            <h4>My leaves</h4>
             <p>30%</p>
           </div>
         </div>
@@ -103,7 +105,7 @@
         </div>
         <div class="col-sm-4">
           <div class="well">
-            
+
           </div>
         </div>
       </div>
