annotation frontend works

--- a/annotate.html
+++ b/annotate.html
@@ -8,9 +8,11 @@
 <body>
 
 <h1>Leaf Annotation</h1>
-<p></p>
+this is a test page
+<p> <%= count %></p>
 
 <img src="leaf.jpg" class="annotatable" />
+
 
 </body>
 </html>
