--- a/annotate_new.html
+++ b/annotate_new.html
@@ -1,7 +1,7 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -18,88 +18,112 @@
 
     <link type="text/css" rel="stylesheet" href="css/annotorious.css" />
     <script type="text/javascript" src="annotorious.min.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="http://localhost:8080">Leaf Project</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <a class="navbar-brand" href="http://localhost:8080">Leaf Project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
     </nav>
 
     <main role="main" class="container">
 
-      <div class="starter-template">
+        <div class="starter-template">
 
-        <h1>Leaf Annotation</h1>
-        this is a test page
-        <p> <%= count %></p>
+            <h1>Leaf Annotation</h1>
+            <br>
+            <br>
+            <h1>SINGLE LEAF ANNOTATION</h1>
+<!--
+                  <img src="public/leaf.jpg" class="annotatable" id="lol"/>
+-->
 
-        <img src="public/leaf.jpg" class="annotatable" id="lol"/>
+            <form action="http://localhost:3000/articles/add" method="post" enctype="multipart/form-data">
+                <p>Title
+                    <input type="text" name="title">
+                    <br>
+                    <p>Type
+                        <input type="text" name="location">
+                        <br>
+                        <p>Annotation details
+                            <input type="text" id="why" name="annote_area">
+                            <br>
 
-        <form action="http://localhost:3000/leaves/add" method="post" enctype="multipart/form-data">
-          <p><input type="text" name="annote_area" value="text default">
-          <p><button type="submit">Submit</button>
+                            <img id="blah"  width="200" height="200" class="annotatable" />
+
+
+                            <input type="file" name="profileImage" onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])" >
+
+
+                            <p>
+                                <button type="submit">Submit</button>
+
+            </form>
             <button onclick="myFunction()">Click me</button>
-        </form>
-      -->
-      </div>
-      <input type="text" id="yay" value="">
-      <button onclick="myFunction()">Click me</button>
-      <p id="demo"></p>
-    </main><!-- /.container -->
-    <script type="text/javascript">
-    //var x= new array(5);
-    //var x=anno.getAnnotations();
-    //var height = canvas.height;
+            -->
+        </div>
+    </main>
+    <!-- /.container -->
 
+    <script type="text/javascript">
+        //var x= new array(5);
+        //var x=anno.getAnnotations();
+        //var height = canvas.height;
     </script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript">
-    function myFunction() {
-      document.getElementById("demo").innerHTML = "Height: " +anno.getAnnotations()["0"].shapes["0"].geometry.height ;
-      console.log(anno.getAnnotations());
-  }
+        function myFunction() {
+            var ans="";
+            for(var i=0;i<anno.getAnnotations().length;i++){
+                ans=ans+ "{" +anno.getAnnotations()[i].text+ "," + anno.getAnnotations()[i].shapes["0"].geometry.height +","+anno.getAnnotations()[i].shapes["0"].geometry.width+","+anno.getAnnotations()[i].shapes["0"].geometry.x+","+anno.getAnnotations()[i].shapes["0"].geometry.y+ "},"
+            }
+            document.getElementById("why").value = ans;
+            console.log(anno.getAnnotations());
+        }
     </script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>
+        window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')
+    </script>
     <script src="../../../../assets/js/vendor/popper.min.js"></script>
     <script src="../../../../dist/js/bootstrap.min.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+</body>
+
 </html>
