--- a/dashboard_new.html
+++ b/dashboard_new.html
@@ -68,26 +68,26 @@
 
             <div class="col-6 col-sm-3 placeholder">
               <a href="http://localhost:3000/">
-              <img href="public/img1.jpg" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail" > </a>
+              <img src="https://i.imgur.com/Z4KWPmh.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail" > </a>
               <h4>Total Number of leaves</h4>
               <div class="text-muted"> <%= count %> </div>
             </div>
 
             <div class="col-6 col-sm-3 placeholder">
               <a href='http://localhost:3000/annotated'>
-              <img href="public/img2.jpg" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail"> </a>
+              <img src="https://i.imgur.com/YZwivHa.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"> </a>
               <h4>Total Annotated Leaves</h4>
               <span class="text-muted"></span>
             </div>
             <div class="col-6 col-sm-3 placeholder">
               <a href='http://localhost:3000/notannotated'>
-              <img href="public/img3.jpg" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail"> </a>
+              <img src="https://i.imgur.com/GTzwx0J.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"> </a>
               <h4>Partially annotated leaves</h4>
               <span class="text-muted"></span>
             </div>
             <div class="col-6 col-sm-3 placeholder">
               <a href='http://localhost:3000/myleaves'>
-              <img href="public/img4.jpg" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail"> </a>
+              <img src="https://i.imgur.com/1yvXEz9.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"> </a>
               <h4>My leaves</h4>
               <span class="text-muted"></span>
             </div>
