Dec9 evening query routes updated

--- a/dashboard_new.html
+++ b/dashboard_new.html
@@ -53,10 +53,13 @@
               <a class="nav-link" href="#">Nav item again</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">One more nav</a>
+              <a class="nav-link" href="#"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Another nav item</a>
+              <a class="nav-link" href="http://localhost:3000">View Leaf Types</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost:3000/singleLeaf">View Leaf list</a>
             </li>
           </ul>
         </nav>
