Added annotable Leaf Type page

--- a/dashboard_new.html
+++ b/dashboard_new.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Dashboard-Leaf Project</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,10 +34,11 @@
               <a class="nav-link" href="http://localhost:8081">Annotate Leaf</a>
             </li>
           </ul>
+          <!--
           <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          </form>  -->
         </div>
       </nav>
     </header>
